# Predicted-Path-Tracing

./: .clang-format  .gitignore  .gitmodules  .pylintrc  LICENSE  Readme.md  install_deps.sh  setup.cfg
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  conv-model.data.json  conv-model.meta.json  conv_model.data.json  conv_model.meta.json  dataset-service.data.json  dataset-service.meta.json  dataset_service.data.json  dataset_service.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
.mypy_cache/3.7/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/dataset_service/: __init__.data.json  __init__.meta.json
.mypy_cache/3.7/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json  util.data.json  util.meta.json
.mypy_cache/3.7/models/: __init__.data.json  __init__.meta.json
.mypy_cache/3.7/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
.mypy_cache/3.7/training_service/: __init__.data.json  __init__.meta.json
predicter/: Readme.md  requirements.txt  run.py
predicter/src/dataset_service/: dataset_repository.py  dataset_service.py
predicter/src/ml_models/: conv_model.py
predicter/src/training_service/: training_service.py
renderer/: CMakeCache.txt  CMakeLists.txt  Readme.md  imgui.ini
renderer/app/: CMakeLists.txt  ppt-app
renderer/app/include/app/: glew_helpers.hpp  glfw_helpers.hpp  index_buffer.hpp  opengl_helpers.hpp  shader_helpers.hpp  vertex_buffer.hpp
renderer/app/include/app/gui/: gui_controller.hpp  gui_state.hpp
renderer/app/include/app/helpers/: glfw_helpers.hpp  imgui_helpers.hpp  opengl_helpers.hpp  shader_helpers.hpp
renderer/app/include/app/opengl_primitives/: index_buffer.hpp  renderer.hpp  shader.hpp  texture.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
renderer/app/res/shaders/: basic.shader
renderer/app/src/: main.cpp
renderer/cli/: CMakeLists.txt  ppt-cli
renderer/cli/src/: main.cpp
renderer/dataset_creator/: CMakeLists.txt
renderer/dataset_creator/include/dataset_creator/: dataset_repository.hpp  dataset_service.hpp
renderer/dataset_creator/src/: dataset_repository.cpp
renderer/path_tracer/: CMakeLists.txt
renderer/path_tracer/include/path_tracer/: camera.cuh  cuda_renderer.cuh  hitable.cuh  hitable_list.cuh  material.cuh  plane.cuh  ray.cuh  render.cuh  render_datapoint.cuh  sphere.cuh  texture.cuh
renderer/path_tracer/include/path_tracer/objects/: aabb.cuh  box.cuh  bvh_node.cuh  flip_normals.cuh  hitable.cuh  hitable_list.cuh  plane.cuh  rect.cuh  rotate.cuh  sphere.cuh  translate.cuh  xy_rect.cuh
renderer/path_tracer/src/: cuda_renderer.cu  render.cu
renderer/runner/: CMakeLists.txt
renderer/runner/src/: main.cu
renderer/runner_app/: CMakeLists.txt
renderer/runner_app/src/: main.cpp
renderer/runner_cli/: CMakeLists.txt
renderer/runner_cli/src/: main.cpp
renderer/shared/: CMakeLists.txt
renderer/shared/include/shared/: cuda_helpers.cuh  cuda_reduction.cuh  matrix_probability_stats.cuh  perlin.cuh  probability_helpers.cuh  random_helpers.cuh  render_datapoint.cuh  sample_service.cuh  scoped_lock.cuh  scoped_thread.cuh  scoped_timer.cuh  vec3.cuh  vec5.cuh
renderer/shared/include/shared/vecs/: vec3.cuh  vec4.cuh  vec5.cuh  vec8.cuh
renderer/shared/src/: cuda_helpers.cu  matrix_probability_stats.cu  probability_helpers.cu
renderer/shared/tests/: probability_helpers_test.cpp
training/: requirements.txt  run.py
training/src/dataset_service/: dataset.py  dataset_repository.py  dataset_service.py  transforms.py
training/src/ml_models/: conv_model.py
training/src/training_service/: training_service.py
